--- a/pos-carts/pom.xml
+++ b/pos-carts/pom.xml
@@ -17,6 +17,26 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.micropos</groupId>
+            <artifactId>pos-products</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <configuration>
+                    <inputSpec>src/main/resources/api.yml</inputSpec>
+                    <generatorName>spring</generatorName>
+                    <modelNameSuffix>Dto</modelNameSuffix>
+                    <apiPackage>com.micropos.carts.api</apiPackage>
+                    <modelPackage>com.micropos.carts.dto</modelPackage>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
