--- a/pos-products/pom.xml
+++ b/pos-products/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <version>3.1.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
