--- a/pos-carts/pom.xml
+++ b/pos-carts/pom.xml
@@ -23,6 +23,11 @@
             <version>0.0.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+            <version>2.1.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
